Second wave of modifications

--- a/cleaning.css
+++ b/cleaning.css
@@ -56,6 +56,10 @@ main img {
     margin: 40px 0;
 }
 
+main .calendar {
+    margin: 16px 0;
+}
+
 main a {
     text-decoration: none;
     color: #fff;
