--- a/lock.css
+++ b/lock.css
@@ -59,6 +59,43 @@ img.switch {
     width: 20px;
 }
 
+/* SWITCH */
+.switch {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 50px;
+    width: 100px;
+    height: 32px;
+    padding: 5px;
+    background-color: #32D74B;
+    transition: background-color .2s;
+    cursor: pointer;
+}
+
+.btn-toggle {
+    width: 24px;
+    height: 24px;
+    border-radius: 20px;
+    background-color: white;
+    transition: transform .1s;
+    padding: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-toggle img {
+    width: 16px;
+    margin: 0;
+}
+
+.switch p {
+    font-size: 10px;
+    margin: 0 8px;
+}
+
+
 /* FOOTER STYLING */
 footer {
     margin: 0 auto;
@@ -78,4 +115,13 @@ footer img {
 footer .lock-active {
     width: 36px;
     height: 36px;
+}
+
+/* TOGGLE BUTTON ANIMATRION */
+.dark-theme .switch {
+    background-color: #FE3A30;
+}
+
+.dark-theme .btn-toggle {
+    transform: translateX(65px);
 }
