--- a/cleaning.css
+++ b/cleaning.css
@@ -1,95 +1,107 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
+ul {
+    list-style-type: none;
+}
+
 body {
-    height: 100vh;
-    font-family: 'Montserrat';
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 32px 0;
-    color: #4F5D6A;
+    font-family: Verdana, sans-serif;
 }
 
-/* HEADER STYLING */
-header {
-    display: flex;
-    justify-content: space-between;
-    width: 85%;
-    margin: 0 auto;
-    align-items: center;
-}
-
-header h5 {
-    font-size: 1em;
-    font-weight: 200;
-}
-
-/* MAIN PAGE STYLING */
-main {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-}
-
-main h2 {
-    font-weight: 200;
-    font-size: 1.6em;
+.month {
+    padding: 40px 25px;
+    width: 100%;
+    background: #459EFF;
     text-align: center;
 }
 
-main h3 {
-    font-size: 2.5em;  
+.month ul {
+    margin: 0;
+    padding: 0;
 }
 
-main h4 {
-    font-weight: 200;
+.month ul li {
+    color: white;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
 }
 
-main img {
-    width: 240px;
-    margin: 40px 0;
+.month .prev {
+    float: left;
+    padding-top: 10px;
 }
 
-main .calendar {
-    margin: 16px 0;
+.month .next {
+    float: right;
+    padding-top: 10px;
 }
 
-main a {
-    text-decoration: none;
-    color: #fff;
-    background-color: #007AFF;
-    padding: 12px 24px;
-    border-radius: 30px;
-    font-size: 0.8em;
+.weekdays {
+    margin: 0;
+    padding: 10px 0;
+    background-color: #EEEEF0;
+    box-shadow: 100%;
 }
 
-img.switch {
-    width: 20px;
+.weekdays li {
+    display: inline-block;
+    width: 13.6%;
+    color: #666;
+    text-align: center;
 }
 
-/* FOOTER STYLING */
-footer {
-    margin: 0 auto;
-    position: relative;
-    /* bottom: -24px; */
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.days {
+    padding: 10px 0;
+    background: #ffff;
+    margin: 0;
 }
 
-footer img {
-    width: 30px;
-    height: 30px;
+.days li {
+    list-style-type: none;
+    display: inline-block;
+    width: 13.6%;
+    text-align: center;
+    margin-bottom: 5px;
+    font-size: 12px;
+    color: #777;
 }
 
-footer .lock-active {
-    width: 36px;
-    height: 36px;
+.days li .active {
+    padding: 5px;
+    border-radius: 40%;
+    background: #459EFF;
+    color: white !important;
+}
+
+
+/* Add media queries for smaller screens */
+@media screen and (max-width:720px) {
+
+    .weekdays li,
+    .days li {
+        width: 13.1%;
+    }
+}
+
+@media screen and (max-width: 420px) {
+
+    .weekdays li,
+    .days li {
+        width: 12.5%;
+    }
+
+    .days li .active {
+        padding: 2px;
+    }
+}
+
+@media screen and (max-width: 290px) {
+
+    .weekdays li,
+    .days li {
+        width: 12.2%;
+    }
 }
