--- a/onboarding.css
+++ b/onboarding.css
@@ -206,3 +206,19 @@ h4 {
     font-size: 20px;
     font-weight: bolder;
 }
+
+.dot {
+  height: 12px;
+  width: 12px;
+  margin: 10px;
+    margin-bottom: 30px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+#first {
+    background-color: #48485B;
+}
+
